feat: fe polished

--- a/less/config.less
+++ b/less/config.less
@@ -1,11 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;700&display=swap');
 @import '../node_modules/npm-font-open-sans/open-sans';
 @FontPathOpenSans: "../fonts/open-sans";
 @import "../node_modules/font-awesome/less/font-awesome";
 @FontFontAwesome: "../fonts/font-awesome";
 
 body {
-    font-family: "Open Sans";
-    background: @color-gray-light;
+    font-family: "Poppins";
+    background: url('../imgs/clouds.png') no-repeat;
+    background-size: cover;
     color: @color-gray-dark;
     font-size: 13px;
+    min-height: 100vh;
 }
