--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,8 @@
 @color-border: #ccc;
-@color-blue: #1b8ccc;
+@color-blue: #052E81;
+@color-blue-light: #acc8fd;
 @color-gray: #666;
 @color-gray-light: #f2f2f2;
 @color-gray-dark: #333;
 
-@border-radius: 4px;
+@border-radius: 8px;
