--- a/less/variants/coverage.less
+++ b/less/variants/coverage.less
@@ -6,13 +6,11 @@
 .coverage__header {
     font-size: 16px;
     font-weight: bold;
-    font-style: italic;
 }
 
 .coverage__divider {
     width: 100%;
-    height: 1px;
-    background: @color-gray-light;
+    border-top: thin solid @color-blue-light;
     margin: 10px 0;
 }
 
