--- a/src/main/webapp/components/main/main.html
+++ b/src/main/webapp/components/main/main.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="main">
-        <span us-spinner="{radius:30, width:8, length: 16}"></span>
+        <span us-spinner="{radius:30, width:8, length: 16}" class="loading-spinner"></span>
         <sidebar></sidebar>
         <variants></variants>
     </div>
