--- a/src/main/webapp/components/variants/variants.html
+++ b/src/main/webapp/components/variants/variants.html
@@ -13,7 +13,7 @@
             limit-right="coverage.limitRight"
             premium="coverage.premium"></coverage>
         <div class="variants__column__price-before-discount">
-            <div class="variants__column__price-before-discounts__label">PRICE BEFORE DISCOUNTS</div>
+            <div class="variants__column__price-before-discounts__label">Price before discounts</div>
             <div class="variants__column__price-before-discounts__value">{{variant.premiumBeforeDiscounts}}</div>
         </div>
         <discount ng-repeat="discount in variant.discounts | orderBy: position"
@@ -22,7 +22,7 @@
             price-before-discount="discount.priceBeforeDiscount"></discount>
 
         <div class="variants__column__final-price">
-            <div class="variants__column__final-price__label">FINAL PRICE</div>
+            <div class="variants__column__final-price__label">Final price:</div>
             <div class="variants__column__final-price__value">{{variant.premium}}</div>
         </div>
     </div>
